# LinuxHomework

./: CMakeLists.txt  README.md  build.sh  test.txt
recv/: test.txt
src/process_control/: exec.exec.cpp  execve.becalled.exec.cpp  execve.call.exec.cpp  exit.exec.cpp  fork.exec.cpp  parseVar.exec.cpp  preload.c  read.exec.cpp  wait.exec.cpp
src/shell/: classifyNetwork.sh  debug.sh  ip.txt  loop.sh
src/socket/exec/: ChatRoomClient.exec.cpp  ChatRoomServer.exec.cpp  client.exec.cpp  server.exec.cpp
src/socket/lib/: Socket.lib.cpp  Socket.lib.h  UI.lib.cpp  UI.lib.h  Util.lib.cpp  Util.lib.h
